@@ -18,10 +18,12 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -36,14 +38,23 @@ public class WebConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity httpSecurity) throws Exception {
 
-        return httpSecurity.csrf(customizer -> customizer.disable())
+        return httpSecurity
+                .csrf(customizer -> customizer.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .headers(header -> header.frameOptions()
+                        .deny()
+                        .contentTypeOptions()
+                        .and()
+                        .httpStrictTransportSecurity(hstsConfig -> hstsConfig.maxAgeInSeconds(3153600).includeSubDomains(true))
+                        .referrerPolicy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN))
                 .authorizeHttpRequests(request -> request.requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers("/api/admin/**").hasAnyAuthority(UserRoles.ADMIN.name())
                 .requestMatchers("/api/participant/**").hasAnyAuthority(UserRoles.PARTICIPANT.name())
+                        .requestMatchers("/api/auth/*/profile-photo" , "/api/auth/*/upload-profile-photo" , "/api/auth/validate-token").authenticated()
                         .anyRequest()
                         .authenticated())
                 .sessionManagement(sessions -> sessions.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .authenticationProvider(authenticationProvider())
                 .addFilterBefore(authFilter , UsernamePasswordAuthenticationFilter.class)
                 .build();
 
@@ -59,13 +70,15 @@ public class WebConfig {
 
         CorsConfiguration corsConfiguration = new CorsConfiguration();
 
-        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+        corsConfiguration.setAllowedOrigins(Arrays.asList("http://localhost:4200" , "http://localhost:3000" , "https://yourdomain.com"));
         corsConfiguration.setAllowedMethods(Arrays.asList("GET","POST" ,"PUT" , "DELETE" , "OPTION"));
-        corsConfiguration.setAllowedHeaders(Arrays.asList("Authorization" , "Content-Type"));
+        corsConfiguration.setAllowedHeaders(List.of("*"));
         corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setExposedHeaders(Arrays.asList("Authorization" , "Content-Type" , "X-Requested-With"));
+        corsConfiguration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**" , corsConfiguration);
+        source.registerCorsConfiguration("/**" , corsConfiguration);
 
         return source;
     }
@@ -75,14 +88,17 @@ public class WebConfig {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
 
         provider.setPasswordEncoder(passwordEncoder());
-     provider.setUserDetailsService(userDetailService);
+        provider.setUserDetailsService(userDetailService);
+        provider.setHideUserNotFoundExceptions(false);
 
         return provider;
     }
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
-
         return configuration.getAuthenticationManager();
     }
+
+
 }
+
